# fastapi_rest_udemy

./: .gitignore  README.md  pyproject.toml
complete_fastapi_rest_course_+_aws_+_emails_+_payments/: main.py
complete_fastapi_rest_course_+_aws_+_emails_+_payments/connection/: database.py
complete_fastapi_rest_course_+_aws_+_emails_+_payments/models/: books  books.py
complete_fastapi_rest_course_+_aws_+_emails_+_payments/schemas/: books.py
migrations/: env.py
migrations/versions/: 1c42c15aae34_add_readers_and_books_relationship.py  4767f89e9cec_init.py  562ef4ec2979_add_readers.py  7aad999055da_add_users.py
src/: main.py
src/auth/: crypt.py  custom_http_header_handler.py  token.py
src/connection/: database.py
src/models/: books.py  readers.py  readers_books.py  users.py
src/schemas/: books.py  readers.py  readers_books.py  users.py
src/schemas/validators/: email_validator.py  name_validator.py  password_validator.py
src/util/: user_roles.py
tests/: complete_fastapi_rest_course_+_aws_+_emails_+_payments.py
